--- a/twitter/package.json
+++ b/twitter/package.json
@@ -4,6 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
+    "start":"node index.js",
+    "nodemon": "nodemon index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
@@ -14,5 +16,8 @@
     "express": "^4.17.1",
     "socket.io": "^2.0.3",
     "twit": "^2.2.9"
+  },
+  "devDependencies": {
+    "nodemon": "^2.0.4"
   }
 }
